samples/_failures_safe/1761558494_678104_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_373edf2c.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_373edf2c.c:185:5: error: expected declaration or statement at end of input
  185 |     }
      |     ^
